# VRLC

./: .gitignore  README.md  pyproject.toml
doc/: TODO.md  VRLC – 1.0.1-Vermelho.md  VRLC – 2.0.0-Vermelho.md  VRLC.md  VRLCValidador.md  estrutura_raiz.md
src/vrlc/: __init__.py  vrlc.py
tests/: VRLCEdit.md  VRLCTest.py  test.md  test_validator.py
